--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,12 @@ node_js:
   - iojs-v1
   - '0.10'
   - '0.12'
-sudo: false
 cache:
   directories:
   - node_modules
 before_install:
   - npm i -g npm@^2.0.0
+  - sudo apt-get install libgnome-keyring-dev
 before_script:
   - npm prune
   - curl -Lo travis_after_all.py https://raw.github.com/dmakhno/travis_after_all/master/travis_after_all.py
