--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ cache:
   - node_modules
 before_install:
   - npm i -g npm@^2.0.0
+  - npm config set spin false --global
   - sudo apt-get install libgnome-keyring-dev
 before_script:
   - npm prune
