--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "lint": "eslint ./src/",
     "postpublish": "semantic-release post",
     "prepublish": "npm run build && semantic-release pre",
-    "test": "npm run build && mocha spec",
+    "test": "npm run lint && npm run build && mocha spec",
     "watch": "npm run build -- --watch"
   },
   "devDependencies": {
