--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,10 @@
 {
-  "stage": 0,
+  "presets": [
+    "es2015",
+    "stage-0"
+  ],
+  "plugins": [
+    "transform-runtime"
+  ],
   "sourceMaps": "inline"
 }
