--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "devDependencies": {
-    "babel-cli": "^6.3.17",
+    "babel-cli": "~6.3.17",
     "babel-eslint": "^4.1.6",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-stage-0": "^6.3.13",
-    "babel-plugin-transform-runtime": "^6.3.13",
+    "babel-preset-es2015": "~6.3.13",
+    "babel-preset-stage-0": "~6.3.13",
+    "babel-plugin-transform-runtime": "~6.3.13",
     "chai": "^3.0.0",
     "grunt": "~0.4.5",
     "mocha": "^2.2.5",
@@ -46,7 +46,7 @@
     "i18n"
   ],
   "dependencies": {
-    "babel-runtime": "^6.3.19",
+    "babel-runtime": "~6.3.19",
     "bluebird": "^3.1.1",
     "inquirer": "^0.11.0",
     "keytar": "^3.0.0",
